force-app/main/default/objects/Prelead__c/Prelead__c.object-meta.xml
<CustomObject>
    <label>Prelead</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Prelead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>