force-app/main/default/objects/Prelead__c/fields/First_name__c.field-meta.xml
<CustomField>
    <fullName>First_name__c</fullName>
    <label>First name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>