force-app/main/default/objects/Prelead__c/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <label>last name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>