force-app/main/default/objects/Prelead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pre Leads</relationshipLabel>
    <relationshipName>Pre_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>