force-app/main/default/objects/Prelead__c/fields/stage__c.field-meta.xml
<CustomField>
    <fullName>stage__c</fullName>
    <label>stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>promoted</fullName>
            </value>
            <value>
                <fullName>verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>